added redirects, removed imcomp old assets

--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -4,156 +4,13 @@
     <meta charset="UTF-8">
     <title>Image Comparator</title>
     <meta name="author" content="Abhishek Dutta">
-    <meta name="description" content="Image Comparator (imcomp) is a tool to compare different images of a same object.">
+    <meta name="description" content="Image Comparator (imcomp) is a tool.">
+    
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
+</head>
 
-    <link rel="shortcut icon" type="image/x-icon" href="/imcomp/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="imcomp.css" />
-
-    <!--
-    Development of VIA is supported by the EPSRC programme grant
-    Seebibyte: Visual Search for the Era of Big Data (EP/M013774/1).
-    Using Google Analytics, we record the usage of this application.
-    This data is used in reporting of this programme grant.
-
-    <script type="text/javascript">
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-20555581-2', 'auto');
-      ga('set', 'page', '/imcomp/zeus.robots.ox.ac.uk/');
-      ga('send', 'pageview');
-    </script>
-    -->
-  </head>
-
-  <body>
-    <div id="select_files_panel" class="select_files_panel display-none">
-      <h1>Traherne Digital Collator</h1>
-      <div class="version"><a href="https://gitlab.com/vgg/imcomp/blob/traherne/CHANGELOG">version 2.0.0-beta</a></div>
-      <div id="add_file_local" class="button">Select files (at least two) that you want to compare</div>
-    </div>
-
-    <div id="compare_panel" class="compare_panel display-none">
-      <!-- Image 1 : left side -->
-      <div class="image_panel">
-        <div class="contents">
-          <div class="toolbar">
-            <ul style="float: right">
-              <li id="file1_zoom_in" title="Zoom In">
-	              <svg height="0.8em" width="0.8em">
-	                <circle cx="0.4em" cy="0.4em" r="0.2em" stroke-width="2"/>
-                  <line x1="0.5em" y1="0.5em" x2="0.75em" y2="0.75em" stroke-width="2"/>
-	              </svg>
-              </li>
-              <li id="file1_zoom_reset" title="Reset Zoom">
-	              <svg height="0.8em" width="0.8em">
-	                <circle cx="0.4em" cy="0.4em" r="0.2em" stroke-width="2"/>
-                  <line x1="0.5em" y1="0.5em" x2="0.75em" y2="0.75em" stroke-width="2"/>
-                  <line x1="0.75em" y1="0.05em" x2="0.05em" y2="0.75em" stroke-width="2"/>
-	              </svg>
-              </li>
-              <li id="file1_delete_sel_region" title="Delete Selected Region">
-              <svg height="0.8em" width="0.8em">
-                <rect width="0.7em" height="0.6em" x="0.05em" y="0.1em" stroke-width="1"/>
-                <line x1="0.2em" y1="0.2em" x2="0.6em" y2="0.6em" stroke-width="2"/>
-                <line x1="0.15em" y1="0.6em" x2="0.65em" y2="0.2em" stroke-width="2"/>
-              </svg>             
-              </li>
-            </ul>
-          </div>
-          <select id="image1_filename_list" name="image1_filename_list">
-          </select>
-          <div class="user_image">
-            <div id="user_image1"></div>
-          </div>
-          <div id="file1_message_panel" class="message_panel"></div>
-        </div>
-      </div> <!-- end of image_panel -->
-
-      <!-- Compare panel : middle -->
-      <div class="compare_result_panel">
-        <div class="toolbox">
-          <ul>
-            <li id="compare" style="padding: 0.5rem 2rem;border-radius: 0.3rem;">Compare Images</li>
-          </ul>
-        </div>
-
-        <div id="toolbox_view" class="toolbox">
-          <ul>
-            <li id="toolbox_view_difference">Difference</li>
-            <li id="toolbox_view_overlay">Overlay</li>
-            <li id="toolbox_view_toggle">Toggle</li>
-          </ul>
-        </div>
-
-        <div id="top_message_panel" class="message_panel"></div>
-        <img id="compare_result_image" src="">
-        <div id="file_info_panel" class="message_panel"></div>
-
-        <div id="toolbox_download" class="toolbox">
-          <ul>
-            <select id="toolbox_download_select" name="data_download">
-              <option value="file2_transformed_region">Image Region 2 (aligned)</option>
-              <option value="file1_region">Image Region 1</option>
-              <option value="file2_region">Image Region 2</option>
-              <option value="difference_image">Difference Image</option>
-              <option value="homography">Homography</option>
-            </select>
-
-            <li id="toolbox_download_button">Download</li>
-          </ul>
-        </div>
-
-        <div id="bottom_message_panel" style="height:2rem; font-family: Mono; padding-top: 2rem;" class="message_panel"></div>
-
-      </div> <!-- end of compare_panel -->
-
-      <!-- Image 2 : right side -->
-      <div class="image_panel">
-        <div class="contents">
-          <div class="toolbar">
-            <ul style="float: left">
-              <li id="file2_zoom_in" title="Zoom In">
-	              <svg height="0.8em" width="0.8em">
-	                <circle cx="0.4em" cy="0.4em" r="0.2em" stroke-width="2"/>
-                  <line x1="0.5em" y1="0.5em" x2="0.75em" y2="0.75em" stroke-width="2"/>
-	              </svg>
-              </li>
-              <li id="file2_zoom_reset" title="Reset Zoom">
-	              <svg height="0.8em" width="0.8em">
-	                <circle cx="0.4em" cy="0.4em" r="0.2em" stroke-width="2"/>
-                  <line x1="0.5em" y1="0.5em" x2="0.75em" y2="0.75em" stroke-width="2"/>
-                  <line x1="0.75em" y1="0.05em" x2="0.05em" y2="0.75em" stroke-width="2"/>
-	              </svg>
-              </li>
-              <li id="file2_delete_sel_region" title="Delete Selected Region">
-              <svg height="0.8em" width="0.8em">
-                <rect width="0.7em" height="0.6em" x="0.05em" y="0.1em" stroke-width="1"/>
-                <line x1="0.2em" y1="0.2em" x2="0.6em" y2="0.6em" stroke-width="2"/>
-                <line x1="0.15em" y1="0.6em" x2="0.65em" y2="0.2em" stroke-width="2"/>
-              </svg>             
-              </li>
-            </ul>
-          </div>
-          <select id="image2_filename_list" name="image2_filename_list">
-          </select>
-          <div class="user_image">
-            <div id="user_image2"></div>
-          </div>
-          <div id="file2_message_panel" class="message_panel"></div>
-        </div>
-      </div> <!-- end of image_panel -->
-
-    </div> <!-- end of content -->
-<!---->
-    <script src="_via_min.js"></script>
-
-    <script src="_imcomp_ctrl.js"></script>
-    <script src="_imcomp_model.js"></script>
-    <script src="_imcomp_view.js"></script>
-    <script src="imcomp.js"></script>
-
-  </body>
+<body>
+    <h1>Image Comparator</h1>
+    <p>The user interface for image comparator will soon be available in this page</p>
+</body>
 </html>
