updated readme, and the links in the traherne ui

--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -52,7 +52,7 @@
 <!--      <div class="row allcaps"><span style="color: #bc2b18">T</span>raherne</div>-->
       <div class="row allcaps">&nbsp;&nbsp;Digital</div>
       <div class="row allcaps">&nbsp;&nbsp;Collator</div>
-      <div class="row small lh2">ver. 2.0.3 | <a href="http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/">about</a> | <a href="http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/UserGuide.html">help</a></div>
+      <div class="row small lh2">ver. 2.0.3 | <a href="http://www.robots.ox.ac.uk/~vgg/software/traherne/">about</a> | <a href="http://www.robots.ox.ac.uk/~vgg/software/traherne/user_guide.html">help</a></div>
     </div>
 
     <!--
