--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -14,9 +14,9 @@
     Seebibyte: Visual Search for the Era of Big Data (EP/M013774/1).
     Using Google Analytics, we record the usage of this application.
     This data is used in reporting of this programme grant.
-
-  <script src="./traherne_google_analytics.js"></script>
   -->
+  <script src="./traherne_google_analytics.js"></script>
+
 </head>
 
 <body>
@@ -32,7 +32,8 @@
             <table>
               <tbody>
                 <tr><td><img src="img/traherne_logo.png"></td></tr>
-                <tr><td><div class="links">ver. 2.0.4&nbsp;|&nbsp;<a href="http://www.robots.ox.ac.uk/~vgg/software/traherne/">about</a> | <a href="http://www.robots.ox.ac.uk/~vgg/software/traherne/user_guide.html">user guide</a></div></td></tr>
+                <tr><td><div class="links">ver. <a target="_blank" href="https://gitlab.com/vgg/imcomp/blob/master/asset/imcomp/traherne/CHANGELOG">2.0.4</a></div></td></tr>
+                <tr><td><div class="links"><a target="_blank" href="http://www.robots.ox.ac.uk/~vgg/software/traherne/help.html">help</a> | <a target="_blank" href="http://www.robots.ox.ac.uk/~vgg/software/traherne/index.html">about</a> | <a target="_blank" href="https://gitlab.com/vgg/imcomp/issues">report issue</a></div></td></tr>
               </tbody>
             </table>
           </td>
