fixed minor issues pointed by @Julia

--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -100,7 +100,7 @@
                 <div class="options">
                   <select name="algorithm_choice" id="algorithm_choice">
                     <option selected="selected" value="ransac_dlt">Flat book pages</option>
-                    <option value="robust_ransac_tps">Curled book pages</option>
+                    <option value="robust_ransac_tps">Curved book pages</option>
                   </select>
                 </div>
               </div>
